Compilation error on build-webkit --debug --no-request-animation-frame on mac. https://bugs.webkit.org/show_bug.cgi?id=75875

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-16
Reviewed by Hajime Morita.

* dom/Document.cpp:
(WebCore::Document::windowScreenDidChange):

git-svn-id: svn://svn.chromium.org/blink/trunk@105048 bbb929c8-8fbe-4397-9dbb-9b2b20218538