third_party/WebKit/Source/WebCore/dom/Document.cpp
@@ -4935,6 +4935,8 @@ void Document::windowScreenDidChange(PlatformDisplayID displayID)
 #if ENABLE(REQUEST_ANIMATION_FRAME)
     if (m_scriptedAnimationController)
         m_scriptedAnimationController->windowScreenDidChange(displayID);
+#else
+    UNUSED_PARAM(displayID);
 #endif
 }
 
